--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
                 <input type="number" id="processes_number" placeholder="Processes number" autofocus>
                 <button type="submit" id="processes_num_submit" disabled>Next</button>
             </form>
-        </div> <!-- el 7ob kolo -->
+        </div>
         <div class="processes">
             <form class="processes__form" id="processes">
                 <h1 class="processes header">Process <span id="process_cnt">0</span></h1>
