--- a/views/css/index.css
+++ b/views/css/index.css
@@ -143,15 +143,7 @@ body {
   display: none;
 }
 
-.header {
-  width: 100%;
-  text-align: center;
-  position: static;
-  font-family: 'Ubuntu', sans-serif;
-  margin-top: 15px;
-}
-
-.subheader {
+.header, .subheader {
   width: 100%;
   text-align: center;
   position: static;
@@ -195,7 +187,6 @@ form {
   position: relative;
   max-width: 70vw;
   margin: 10px auto;
-  margin-top: 35px;
   padding: 25px 0;
 }
 
