--- a/views/css/index.css
+++ b/views/css/index.css
@@ -35,7 +35,6 @@ body {
   background-color: #01110c;
 }
 
-/* add holes */
 .back-button-disabled {
   background-color: #ccc;
   cursor: default;
@@ -67,6 +66,38 @@ body {
 
 .back-button:hover {
   background-color: rgba(150, 150, 150, 0.9);
+}
+
+.home-button-disabled {
+  opacity: 0.6;
+  cursor: default;
+  position: fixed;
+  background-image: url("../icons/home.png");
+  top: 4vh;
+  right: 2vw;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home-button {
+  position: fixed;
+  background-image: url("../icons/home.png");
+  top: 4vh;
+  right: 2vw;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.home-button:hover {
+  opacity: 0.8;
 }
 
 .forms {
