--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,9 @@
     <div class="back-button-disabled" id="back-button">
         
     </div>
+    <div class="home-button-disabled" id="home-button">
+        
+    </div>
     <div class="forms">
         <div class="memory">
             <h1 class="memory header">Memory description</h1>
