--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,6 +8,7 @@
         <script src="./js/deallocate.js"></script>
         <script src="./js/formHandlers.js"></script>              
         <script src="./js/index.js"></script>
-        <script src="./js/backButton.js"></script>    
+        <script src="./js/backButton.js"></script>
+        <script src="./js/homeButton.js"></script>    
     </body>
 </html>
