--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <div class="forms">
         <div class="memory">
             <h1 class="memory header">Memory description</h1>
-            <form class="memory form" id="main_form">
+            <form class="memory form" id="main_form" style="margin-top: 10px">
                 <input type="number" id="memory_size" placeholder="Memory size" autofocus>
                 <input type="number" id="holes_number" placeholder="Holes number">
                 <button type="submit" id="memory_submit" disabled>Next</button>
